--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,30 +1,36 @@
 .header {
     background: LightSkyBlue;
     grid-area: header;
+    box-sizing: border-box;
       }
 
   .hero {
     background: LightSalmon;
     grid-area: hero;
+    box-sizing: border-box;
   }
 
   .body {
     background: PaleTurquoise;
     grid-area: body;
+    box-sizing: border-box;
   }
 
   .advert {
     background: rgb(195, 182, 255);
     grid-area: advert;
+    box-sizing: border-box;
 
   }
   .sidebar {
     background: greenyellow;
     grid-area: sidebar;
+    box-sizing: border-box;
   }
   .footer {
   background: lightpink;
     grid-area: footer;
+    box-sizing: border-box;
 
   }
   .container {
@@ -59,8 +65,6 @@
     grid-gap: 10px;
     grid-template-areas:
       "header"
-      "header"
-      "header"
       "hero"
       "hero"
       "body"
@@ -68,7 +72,8 @@
       "body"
       "body"
       "body"
-      "body"
+      "sidebar"
+      "sidebar"
       "footer";
     }
   }
