--- a/styles/layout.css
+++ b/styles/layout.css
@@ -5,13 +5,13 @@
       }
 
   .hero {
-    background: LightSalmon;
+    background: lightskyblue;
     grid-area: hero;
     box-sizing: border-box;
   }
 
   .body {
-    background: PaleTurquoise;
+    background: lightskyblue;
     grid-area: body;
     box-sizing: border-box;
   }
@@ -24,13 +24,13 @@
 
   }
   .sidebar {
-    background: greenyellow;
+    background: lightskyblue;
     grid-area: sidebar;
     box-sizing: border-box;
     display: none;
   }
   .footer {
-  background: lightpink;
+  background: lightskyblue;
     grid-area: footer;
     box-sizing: border-box;
 
@@ -39,9 +39,9 @@
     font-size: 1.5em;
     box-sizing: border-box;
     min-height: 300px;
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    background: LightGray;
+    background: rgb(68, 65, 214);
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(12, 1fr);
@@ -64,20 +64,14 @@
   @media (min-width:576px){
     .sidebar{display: block;}
     .container{
-    height: 100%;
+    height: 100vh;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-rows: 1fr 2fr 5fr 2fr 1fr ;
     grid-gap: 10px;
     grid-template-areas:
       "header"
       "hero"
-      "hero"
       "body"
-      "body"
-      "body"
-      "body"
-      "body"
-      "sidebar"
       "sidebar"
       "footer";
     }
@@ -87,22 +81,14 @@
     .advert{display: block;}
     .sidebar{ display: block;}
     .container{
-    height: 100%;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
+    height: 100vh;
+    grid-template-columns: 9fr 3fr;
+    grid-template-rows: 2fr 3fr 6fr 1fr;
     grid-gap: 10px;
     grid-template-areas:
-    "header header header header header header header header header header header header "
-    "header header header header header header header header header header header header "
-      "hero hero hero hero hero hero hero hero hero advert advert advert "
-      "hero hero hero hero hero hero hero hero hero advert advert advert "
-      "hero hero hero hero hero hero hero hero hero advert advert advert "
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "body body body body body body body body body sidebar sidebar sidebar"
-      "footer footer footer footer footer footer footer footer footer footer footer footer";
+    "header header"
+    "hero advert "
+    "body sidebar"
+    "footer footer";
     }
   }
