--- a/styles/elementi.css
+++ b/styles/elementi.css
@@ -17,5 +17,34 @@ button{
 .navigacija{
     color: whitesmoke;
     font-size: 1em;
-    text-align: center; 
+    text-align: center;
 }
+ul {
+    list-style-type: none;
+    margin: 10px;
+    padding: 10px;
+    overflow: hidden;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #323136;
+  }
+  .liste {
+    padding: 15px; 
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 2;
+  }
