--- a/styles/elementi.css
+++ b/styles/elementi.css
@@ -6,13 +6,14 @@
 }
 button{
     background-color:whitesmoke; 
-  color: black;
+  color: rgb(57, 57, 63);
   padding: 15px 32px;
   text-align: center;
   text-justify: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  font-weight: bold;
 }
 .navigacija{
     color: whitesmoke;
@@ -45,6 +46,7 @@ ul {
   .liste {
     padding: 15px; 
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     line-height: 2;
+    color: rgb(57, 57, 63);
   }
