--- a/styles/elementi.css
+++ b/styles/elementi.css
@@ -46,7 +46,9 @@ ul {
   .liste {
     padding: 15px; 
     font-weight: bold;
+    font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     line-height: 2;
     color: rgb(57, 57, 63);
+    text-align: left;
   }
