--- a/styles/layout2.css
+++ b/styles/layout2.css
@@ -154,7 +154,7 @@
       width: 100%;
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: 2fr 3fr 6fr 1fr;
+      grid-template-rows: 300px 3fr 6fr 1fr;
       grid-gap: 10px;
       grid-template-areas:
         "header"
@@ -167,7 +167,7 @@
       .sidebar{display: block;}
       .container{
       grid-template-columns: 1fr;
-      grid-template-rows: 1fr 3fr 5fr 2fr 1fr ;
+      grid-template-rows: 160px 3fr 5fr 2fr 1fr ;
       grid-gap: 10px;
       grid-template-areas:
         "header"
@@ -219,7 +219,7 @@
       .inner-advert{display: none;}
       .container{
       grid-template-columns: 9fr 3fr;
-      grid-template-rows: 160px 4fr 6fr 2fr;
+      grid-template-rows: 160px 2fr 3fr 1fr;
       grid-gap: 5px;
       grid-template-areas:
       "header header"
